[gd_scene load_steps=12 format=2]

[ext_resource path="res://Object/Component/Camera2D.tscn" type="PackedScene" id=1]
[ext_resource path="res://Object/BoundingArea/BoundingArea.tscn" type="PackedScene" id=2]
[ext_resource path="res://Object/GroundEntitySpawnPositions/GroundEntitySpawnPositions.tscn" type="PackedScene" id=3]
[ext_resource path="res://Object/Portal/MapChangingPortal.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scene/WaveMap/WaveMapClass.gd" type="Script" id=5]
[ext_resource path="res://Assate/envirnment.png" type="Texture" id=6]
[ext_resource path="res://Assate/Tileset/Floor.tres" type="TileSet" id=7]
[ext_resource path="res://Assate/shader/2D wind.shader" type="Shader" id=8]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 320, 10 )

[sub_resource type="ShaderMaterial" id=2]
shader = ExtResource( 8 )
shader_param/speed = 2.0
shader_param/minStrength = 0.159
shader_param/maxStrength = 0.246
shader_param/strengthScale = 100.0
shader_param/interval = 3.5
shader_param/detail = 1.343
shader_param/distortion = 0.0
shader_param/hightOffset = 0.582
shader_param/offset = 0.0

[sub_resource type="TileSet" id=3]
0/name = "envirnment.png 0"
0/texture = ExtResource( 6 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 112, 80, 96, 48 )
0/tile_mode = 2
0/autotile/icon_coordinate = Vector2( 0, 0 )
0/autotile/tile_size = Vector2( 16, 16 )
0/autotile/spacing = 0
0/autotile/occluder_map = [  ]
0/autotile/navpoly_map = [  ]
0/autotile/priority_map = [  ]
0/autotile/z_index_map = [  ]
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
1/name = "envirnment.png 1"
1/texture = ExtResource( 6 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 0, 64, 208, 16 )
1/tile_mode = 2
1/autotile/icon_coordinate = Vector2( 0, 0 )
1/autotile/tile_size = Vector2( 16, 16 )
1/autotile/spacing = 0
1/autotile/occluder_map = [  ]
1/autotile/navpoly_map = [  ]
1/autotile/priority_map = [  ]
1/autotile/z_index_map = [  ]
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0

[node name="Map_1" type="Node2D"]
script = ExtResource( 5 )

[node name="BoundingArea" parent="." instance=ExtResource( 2 )]
position = Vector2( 304, 368 )
respawn_position = NodePath("../PlayerSpawnPosition")

[node name="CollisionShape2D" type="CollisionShape2D" parent="BoundingArea"]
shape = SubResource( 1 )

[node name="Camera2D" parent="." instance=ExtResource( 1 )]
current = true

[node name="BeeSpawningTimer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="GrubSpawningTimer" type="Timer" parent="."]
autostart = true

[node name="DroplySpawningTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
autostart = true

[node name="GroundEntitySpawnPositions" parent="." instance=ExtResource( 3 )]

[node name="Position2D" type="Position2D" parent="GroundEntitySpawnPositions"]
position = Vector2( 68, 270 )

[node name="Position2D2" type="Position2D" parent="GroundEntitySpawnPositions"]
position = Vector2( 217, 302 )

[node name="Position2D3" type="Position2D" parent="GroundEntitySpawnPositions"]
position = Vector2( 287, 302 )

[node name="Position2D4" type="Position2D" parent="GroundEntitySpawnPositions"]
position = Vector2( 359, 286 )

[node name="Position2D5" type="Position2D" parent="GroundEntitySpawnPositions"]
position = Vector2( 531, 254 )

[node name="Backgroun" type="TileMap" parent="."]
material = SubResource( 2 )
tile_set = SubResource( 3 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( 917537, 0, 1, 983044, 0, 1, 983070, 1, 2, 983071, 1, 5, 983072, 1, 3, 983073, 0, 131074, 983074, 1, 0, 983075, 1, 5, 1048578, 1, 5, 1048579, 1, 2, 1048580, 0, 131072, 1048581, 1, 4, 1048582, 1, 2, 1048583, 1, 0, 1048600, 0, 1, 1114124, 0, 1, 1114129, 0, 1, 1114132, 1, 2, 1114133, 1, 0, 1114134, 1, 4, 1114135, 1, 4, 1114136, 0, 131072, 1114137, 1, 5, 1179659, 1, 4, 1179660, 0, 131074, 1179661, 1, 2, 1179662, 1, 3, 1179663, 1, 0, 1179664, 1, 4, 1179665, 0, 131074, 1179666, 1, 4 )

[node name="OuterGround" type="TileMap" parent="."]
tile_set = ExtResource( 7 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( 1048605, 0, 0, 1048606, 0, 1, 1048607, 0, 1, 1048608, 0, 1, 1048609, 0, 1, 1048610, 0, 1, 1048611, 0, 1, 1048612, 0, 2, 1114113, 0, 0, 1114114, 0, 1, 1114115, 0, 1, 1114116, 0, 1, 1114117, 0, 1, 1114118, 0, 1, 1114119, 0, 2, 1114141, 0, 65536, 1114142, 0, 65537, 1114143, 0, 65537, 1114144, 0, 65537, 1114145, 0, 65537, 1114146, 0, 65537, 1114147, 0, 65537, 1114148, 0, 65538, 1179649, 0, 65536, 1179650, 0, 65537, 1179651, 0, 65537, 1179652, 0, 65537, 1179653, 0, 65537, 1179654, 0, 65537, 1179655, 0, 65538, 1179668, 0, 0, 1179669, 0, 1, 1179670, 0, 1, 1179671, 0, 1, 1179672, 0, 1, 1179673, 0, 2, 1179677, 0, 65536, 1179678, 0, 65537, 1179679, 0, 65537, 1179680, 0, 65537, 1179681, 0, 65537, 1179682, 0, 65537, 1179683, 0, 65537, 1179684, 0, 65538, 1245185, 0, 65536, 1245186, 0, 65537, 1245187, 0, 65537, 1245188, 0, 65537, 1245189, 0, 65537, 1245190, 0, 65537, 1245191, 0, 65538, 1245195, 0, 0, 1245196, 0, 1, 1245197, 0, 1, 1245198, 0, 1, 1245199, 0, 1, 1245200, 0, 1, 1245201, 0, 1, 1245202, 0, 1, 1245203, 0, 1, 1245204, 0, 262145, 1245205, 0, 65537, 1245206, 0, 65537, 1245207, 0, 65537, 1245208, 0, 65537, 1245209, 0, 65538, 1245213, 0, 65536, 1245214, 0, 65537, 1245215, 0, 65537, 1245216, 0, 65537, 1245217, 0, 65537, 1245218, 0, 65537, 1245219, 0, 65537, 1245220, 0, 65538, 1310721, 0, 65536, 1310722, 0, 65537, 1310723, 0, 65537, 1310724, 0, 65537, 1310725, 0, 65537, 1310726, 0, 65537, 1310727, 0, 65538, 1310731, 0, 65536, 1310732, 0, 65537, 1310733, 0, 65537, 1310734, 0, 65537, 1310735, 0, 65537, 1310736, 0, 65537, 1310737, 0, 65537, 1310738, 0, 65537, 1310739, 0, 65537, 1310740, 0, 65537, 1310741, 0, 65537, 1310742, 0, 65537, 1310743, 0, 65537, 1310744, 0, 65537, 1310745, 0, 65538, 1310749, 0, 65536, 1310750, 0, 65537, 1310751, 0, 65537, 1310752, 0, 65537, 1310753, 0, 65537, 1310754, 0, 65537, 1310755, 0, 65537, 1310756, 0, 65538, 1376257, 0, 65536, 1376258, 0, 65537, 1376259, 0, 65537, 1376260, 0, 65537, 1376261, 0, 65537, 1376262, 0, 65537, 1376263, 0, 65538, 1376267, 0, 65536, 1376268, 0, 65537, 1376269, 0, 65537, 1376270, 0, 65537, 1376271, 0, 65537, 1376272, 0, 65537, 1376273, 0, 65537, 1376274, 0, 65537, 1376275, 0, 65537, 1376276, 0, 65537, 1376277, 0, 65537, 1376278, 0, 65537, 1376279, 0, 65537, 1376280, 0, 65537, 1376281, 0, 65538, 1376285, 0, 65536, 1376286, 0, 65537, 1376287, 0, 65537, 1376288, 0, 65537, 1376289, 0, 65537, 1376290, 0, 65537, 1376291, 0, 65537, 1376292, 0, 65538, 1441793, 0, 131072, 1441794, 0, 131073, 1441795, 0, 131073, 1441796, 0, 131073, 1441797, 0, 131073, 1441798, 0, 131073, 1441799, 0, 131074, 1441803, 0, 131072, 1441804, 0, 131073, 1441805, 0, 131073, 1441806, 0, 131073, 1441807, 0, 131073, 1441808, 0, 131073, 1441809, 0, 131073, 1441810, 0, 131073, 1441811, 0, 131073, 1441812, 0, 131073, 1441813, 0, 131073, 1441814, 0, 131073, 1441815, 0, 131073, 1441816, 0, 131073, 1441817, 0, 131074, 1441821, 0, 131072, 1441822, 0, 131073, 1441823, 0, 131073, 1441824, 0, 131073, 1441825, 0, 131073, 1441826, 0, 131073, 1441827, 0, 131073, 1441828, 0, 131074 )

[node name="PlayerSpawnPosition" type="Position2D" parent="."]
position = Vector2( 224, 288 )

[node name="MapChangingPortal" parent="." instance=ExtResource( 4 )]
position = Vector2( 320, 288 )
root_node = NodePath("..")

[connection signal="timeout" from="BeeSpawningTimer" to="." method="_on_timer_out_spawn_bee"]
[connection signal="timeout" from="GrubSpawningTimer" to="." method="_on_GrubSpawningTimer_timeout"]
[connection signal="timeout" from="DroplySpawningTimer" to="." method="_on_timer_out_spawn_droply"]
